[tool.poetry]
name = "ens-offers"
version = "0.1.0"
description = ""
authors = ["kulgg <75735874+kulgg@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ens_offers"}]

[tool.poetry.scripts]
x = "ens_offers.main:main"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
requests = "^2.28.1"
python-telegram-bot = "^13.15"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
